get the index page to a stopping point

--- a/index.html
+++ b/index.html
@@ -5,10 +5,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CHHS Labs</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
     <div id="wrapper">
-        <p>Test</p>
+        <header>
+            <h1>CHHS Computer Labs</h1>
+        </header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#"><i class="fas fa-home"></i> Home</a>
+                </li>
+                <li>
+                    <a href="#"><i class="fas fa-desktop"></i> Labs</a>
+                </li>
+                <li>
+                    <a href="#"><i class="fas fa-tasks"></i> Tutorials</a>
+                </li>
+                <li>
+                    <a href="#"><i class="fas fa-envelope"></i> Contact</a>
+                </li>
+            </ul>
+        </nav>
+        <div id="content">
+            <aside>
+                <h5>Phone Numbers</h5>
+                <ul>
+                    <li>
+                        <b>Helpdesk:</b> 491-3458
+                    </li>
+                    <li>
+                        <b>Education 220:</b> 491-3860
+                    </li>
+                    <li>
+                        <b>Gifford 317:</b> 491-7406
+                    </li>
+                    <li>
+                        <b>Moby B-219A:</b> 491-6004
+                    </li>
+                    <li>
+                       <b>Precon 200 & 201:</b> 491-4658
+                    </li>
+                    <li>
+                        <b>RDC 104:</b> 491-6547
+                    </li>
+                </ul>
+            </aside>
+            <main>
+                <h2>Welcome to CHHS Computer Labs!</h2>
+                <p class="mb-0">
+                    We are a collection of five computer labs across CSU’s main campus that serve students in the College of Health and Human Sciences.
+                    Whether you’re a major in our college, a minor, or simply taking a class in one of our departments, you have access to our computer lab spaces and equipment.
+                </p>
+                <img src="images/lab-map.png" alt="Map of the 5 CHHS labs on campus" />
+                <div class="caption">The five computer labs in the College of Health and Human Sciences are circled in green.</div>
+                <p>
+                    Each lab is equipped with printers and computers available to students and faculty in the college. More information about the specific hardware and software available in each lab is listed on the labs’ respective information pages.
+                </p>
+            </main>
+        </div>
     </div>
 </body>
 </html>
