add management to sidebar

--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
                         <b>RDC 104:</b> 491-6547
                     </li>
                 </ul>
+
+                <h5>Management</h5>
+                <ul>
+                    <li><b>Katie Lungren:</b> 491-6803</li>
+                    <li><b>Eric Tisdale:</b> 491-3393</li>
+                </ul>
             </aside>
             <main>
                 <h2>Welcome to CHHS Computer Labs!</h2>
