finish up index

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#"><i class="fas fa-home"></i> Home</a>
+                    <a href="index.html"><i class="fas fa-home"></i> Home</a>
                 </li>
                 <li>
                     <a href="#"><i class="fas fa-desktop"></i> Labs</a>
@@ -71,6 +71,9 @@
                 </p>
             </main>
         </div>
+        <footer>
+            <p>Copyright &copy; 2021, CHHS Computer Labs</p>
+        </footer>
     </div>
 </body>
 </html>
