click to show image

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                     We are a collection of five computer labs across CSU’s main campus that serve students in the College of Health and Human Sciences.
                     Whether you’re a major in our college, a minor, or simply taking a class in one of our departments, you have access to our computer lab spaces and equipment.
                 </p>
-                <img src="images/lab-map.png" alt="Map of the 5 CHHS labs on campus" />
+                <a href="images/lab-map.png" target="_blank">
+                    <img src="images/lab-map.png" alt="Map of the 5 CHHS labs on campus" />
+                </a>
                 <div class="caption">The five computer labs in the College of Health and Human Sciences are circled in green.</div>
                 <p>
                     Each lab is equipped with printers and computers available to students and faculty in the college. More information about the specific hardware and software available in each lab is listed on the labs’ respective information pages.
