--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <a href="index.html"><i class="fas fa-home"></i> Home</a>
                 </li>
                 <li>
-                    <a href="#"><i class="fas fa-desktop"></i> Labs</a>
+                    <a href="labs/index.html"><i class="fas fa-desktop"></i> Labs</a>
                 </li>
                 <li>
                     <a href="#"><i class="fas fa-tasks"></i> Tutorials</a>
