increase caption margin

--- a/labs/index.html
+++ b/labs/index.html
@@ -57,7 +57,7 @@
         The tech fee is invested with the general oversight of the Dean’s Leadership Council of CHHS.
       </p>
       <a href="../images/rdc-plotter.jpg" target="_blank">
-        <img src="../images/rdc-plotter.jpg" alt="Map of the 5 CHHS labs on campus" />
+        <img src="../images/rdc-plotter.jpg" alt="Large, gray HP InkJet Plotter printer on a white background" />
       </a>
       <div class="caption">The plotter is an advanced printer designed for posters, architectural floorplans, and interior design renderings.</div>
       <p>
