--- a/labs/index.html
+++ b/labs/index.html
@@ -64,6 +64,10 @@
         Each lab has at least one space that can be reserved by instructors for classroom usage. These spaces are designed to facilitate collaboration while modeling industry standards.
         Whether your needs lie in construction, interior design, education, or dietary analysis, our labs have technology available to you that is representative of that found in the private sector.
       </p>
+
+      <h4>Announcements</h4>
+      <p>The Gifford, Preconstruction Center, and Richardson Design Center labs are open for 24-hour access with a RamCard. All CHHS computer labs have a lab operator available 7:30am-8:30pm Monday through Friday, with varying hours on the weekend.</p>
+      <p>All labs, with the exception of Education 220, have remote access to computers. Please see <a href="#">here</a> for a list of remote-only computers accessible via Microsoft Remote Desktop.</p>
     </main>
   </div>
   <footer>
