fix the dropdown toggler

--- a/labs/index.html
+++ b/labs/index.html
@@ -16,7 +16,7 @@
     <nav>
         <ul class="main-nav">
             <li>
-                <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Home</a>
+                <a class="nav-link" href="../index.html"><i class="fas fa-home"></i> Home</a>
             </li>
             <li>
                 <a class="nav-link" href="labs/index.html">
