start adding education stuff

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="dropdown-content" id="labs-dropdown">
                         <ul>
                             <li>
-                                <a href="#">Education</a>
+                                <a href="labs/education.html">Education</a>
                             </li>
                             <li>
                                 <a href="#">Gifford</a>
