--- a/labs/index.html
+++ b/labs/index.html
@@ -19,14 +19,14 @@
                 <a class="nav-link" href="../index.html"><i class="fas fa-home"></i> Home</a>
             </li>
             <li>
-                <a class="nav-link" href="labs/index.html">
+                <a class="nav-link" href="index.html">
                     <i class="fas fa-desktop"></i> Labs
                 </a>
                 <i data-target="#labs-dropdown" class="fas fa-caret-down dropdown-toggle text-white"></i>
                 <div class="dropdown-content" id="labs-dropdown">
                     <ul>
                         <li>
-                            <a href="#">Education</a>
+                            <a href="education.html">Education</a>
                         </li>
                         <li>
                             <a href="#">Gifford</a>
@@ -56,7 +56,7 @@
             <h5>Labs</h5>
             <ul>
                 <li>
-                    <a href="#">Education 220</a>
+                    <a href="education.html">Education 220</a>
                 </li>
                 <li>
                     <a href="#">Gifford 317</a>
