add more edu stuff

--- a/labs/education.html
+++ b/labs/education.html
@@ -57,6 +57,9 @@
             <dl>
                 <dt>Monday - Friday</dt>
                 <dd>7:30am-8:30pm</dd>
+
+                <dt>Saturday and Sunday</dt>
+                <dd>10:30am - 4:30pm</dd>
             </dl>
         </aside>
         <main>
