--- a/labs/education.html
+++ b/labs/education.html
@@ -56,11 +56,29 @@
             <h5>Hours</h5>
             <dl>
                 <dt>Monday - Friday</dt>
-                <dd>7:30am-8:30pm</dd>
+                <dd>7:30am - 8:30pm</dd>
 
                 <dt>Saturday and Sunday</dt>
                 <dd>10:30am - 4:30pm</dd>
+
+                <dt>Stadium Game Days</dt>
+                <dd>Closed</dd>
             </dl>
+
+            <h5>Contact</h5>
+            <dl>
+                <dt>Lab Op Desk</dt>
+                <dd>491-3860</dd>
+
+                <dt>Senior Lab Op</dt>
+                <dd><a href="mailto:dallin.casey@rams.colostate.edu">Dallin Casey</a></dd>
+            </dl>
+
+            <h5>Help Articles</h5>
+            <ul class="no-style">
+                <li><a href="#">Printing to the Plotter</a></li>
+                <li><a href="#">Using the Projector</a></li>
+            </ul>
         </aside>
         <main>
             <h2>Education 220</h2>
