--- a/labs/gifford.html
+++ b/labs/gifford.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CHHS Labs | Education 220</title>
+    <title>CHHS Labs | Gifford 317</title>
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
           integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
@@ -53,7 +53,7 @@
     </nav>
     <div id="content">
         <aside>
-            <h5>Hours</h5>
+            <h5>Hours <span class="badge">24/7 Access</span></h5>
             <dl>
                 <dt>Monday - Friday</dt>
                 <dd>7:30am - 8:30pm</dd>
@@ -68,52 +68,69 @@
             <h5>Contact</h5>
             <dl>
                 <dt>Lab Op Desk</dt>
-                <dd>491-3860</dd>
+                <dd>491-7406</dd>
 
                 <dt>Senior Lab Op</dt>
-                <dd><a href="mailto:dallin.casey@rams.colostate.edu">Dallin Casey</a></dd>
+                <dd><a href="mailto:blake.c.davis@colostate.edu">Blake Davis</a></dd>
             </dl>
         </aside>
         <main>
-            <h2>Education 220</h2>
-            <p>Welcome to the Education 220 computer lab.
-                Located on the second floor of the Education building at 450 W Pitkin St, directly west of the Behavioral Sciences Building, this lab serves students in the Education, Social Work, and Human Development and Family Studies majors.</p>
-            <p>[add pic of education]</p>
-            <p class="caption">The Education 220 lab has 43 computers available to students and a teacher podium with a projector screen.</p>
+            <h2>Gifford 317</h2>
+            <p>Welcome to the Gifford 317 computer lab.
+                Located on the third floor of the Gifford building at 502 W Lake St, directly east of the Richardson Design Center Building, this lab serves students in Apparel Merchandising, Food Science and Human Nutrition, and Interior Architecture and Design majors.</p>
+            <p>[add pic of gifford]</p>
+            <p class="caption">The Gifford 317 lab has 99 computers available to students and a teacher podium with a projector screen.</p>
 
             <h4>Reservations</h4>
-            <p>The Education 220 lab is reserved for classes during the following times:</p>
+            <p>The Gifford 317 lab is reserved for classes during the following times:</p>
             <ul>
-                <li>Monday: 10:00am-10:50am, 11:00am-1:50pm</li>
-                <li>Tuesday: 9:00am-10:40am, 2:00pm-2:50pm, 3:00pm-4:50pm</li>
-                <li>Wednesday: 10:00am-10:50am, 7:00pm-8:00pm</li>
-                <li>Thursday: 9:00am-10:40am, 2:00pm-2:50pm</li>
-                <li>Friday: 9:00am-10:50am</li>
+                <li>Monday: 9:00am-2:40pm, 3:00pm-5:15pm</li>
+                <li>Tuesday: 9:00am-12:15pm, 12:30pm-6:40pm</li>
+                <li>Wednesday: 9:00am-1:50pm, 3:00pm-5:15pm</li>
+                <li>Thursday: 9:00am-12:15pm, 12:30pm-6:40pm</li>
+                <li>Friday: 10:00am-1:50pm, 2:30pm-4:30pm</li>
             </ul>
 
             <h4>Hardware</h4>
-            <p>The Education 220 lab has a color printer, black and white printer, and a plotter.
+            <p>The Gifford 317 lab has a color printer, two black and white printers, and a plotter.
                 The computers are HP Z2 Mini workstations equipped with 8GB of RAM.</p>
 
             <h4>Software</h4>
-            <p>The following software is available in the Education 220 lab:</p>
+            <p>The following software is available in the Gifford 317 lab:</p>
             <ul>
+                <li>
+                    Adobe Creative Cloud Suite
+                    <ul>
+                        <li>Acrobat</li>
+                        <li>Photoshop</li>
+                        <li>Illustrator</li>
+                        <li>InDesign</li>
+                    </ul>
+                </li>
                 <li>Audacity</li>
-                <li>Autodesk 2020 (3ds Max, Architecture, Arnold, AutoCAD, Inventor, NavisWorks, Revit)</li>
-                <li>EndNote</li>
+                <li>
+                    Autodesk 2020
+                    <ul>
+                        <li>3DS Max</li>
+                        <li>Architecture</li>
+                        <li>Arnold</li>
+                        <li>AutoCAD</li>
+                        <li>Inventor</li>
+                        <li>NavisWorks</li>
+                        <li>Revit</li>
+                    </ul>
+                </li>
+                <li>ESHA Food Processor SQL</li>
+                <li>Lectra</li>
                 <li>Microsoft Office</li>
                 <li>Microsoft Project</li>
                 <li>Microsoft Visio</li>
-                <li>NVivo</li>
                 <li>Read&Write Gold</li>
                 <li>Rstudio Desktop</li>
-                <li>SAS University</li>
                 <li>SketchUp Pro</li>
-                <li>SMART Notebook</li>
                 <li>SPSS, AMOS</li>
                 <li>V-Ray</li>
                 <li>WindowShades</li>
-                <li>Zotero</li>
             </ul>
 
         </main>
