--- a/labs/education.html
+++ b/labs/education.html
@@ -53,26 +53,28 @@
     </nav>
     <div id="content">
         <aside>
-            <h5>Hours</h5>
-            <dl>
-                <dt>Monday - Friday</dt>
-                <dd>7:30am - 8:30pm</dd>
+            <div class="sticky-top">
+                <h5>Hours</h5>
+                <dl>
+                    <dt>Monday - Friday</dt>
+                    <dd>7:30am - 8:30pm</dd>
 
-                <dt>Saturday and Sunday</dt>
-                <dd>10:30am - 4:30pm</dd>
+                    <dt>Saturday and Sunday</dt>
+                    <dd>10:30am - 4:30pm</dd>
 
-                <dt>Stadium Game Days</dt>
-                <dd>Closed</dd>
-            </dl>
+                    <dt>Stadium Game Days</dt>
+                    <dd>Closed</dd>
+                </dl>
 
-            <h5>Contact</h5>
-            <dl>
-                <dt>Lab Op Desk</dt>
-                <dd>491-3860</dd>
+                <h5>Contact</h5>
+                <dl>
+                    <dt>Lab Op Desk</dt>
+                    <dd>491-3860</dd>
 
-                <dt>Senior Lab Op</dt>
-                <dd><a href="mailto:dallin.casey@rams.colostate.edu">Dallin Casey</a></dd>
-            </dl>
+                    <dt>Senior Lab Op</dt>
+                    <dd><a href="mailto:dallin.casey@rams.colostate.edu">Dallin Casey</a></dd>
+                </dl>
+            </div>
         </aside>
         <main>
             <h2>Education 220</h2>
