--- a/labs/gifford.html
+++ b/labs/gifford.html
@@ -53,26 +53,28 @@
     </nav>
     <div id="content">
         <aside>
-            <h5>Hours <span class="badge">24/7 Access</span></h5>
-            <dl>
-                <dt>Monday - Friday</dt>
-                <dd>7:30am - 8:30pm</dd>
+            <div class="sticky-top">
+                <h5>Hours <span class="badge">24/7 Access</span></h5>
+                <dl>
+                    <dt>Monday - Friday</dt>
+                    <dd>7:30am - 8:30pm</dd>
 
-                <dt>Saturday and Sunday</dt>
-                <dd>10:30am - 4:30pm</dd>
+                    <dt>Saturday and Sunday</dt>
+                    <dd>10:30am - 4:30pm</dd>
 
-                <dt>Stadium Game Days</dt>
-                <dd>Closed</dd>
-            </dl>
+                    <dt>Stadium Game Days</dt>
+                    <dd>Closed</dd>
+                </dl>
 
-            <h5>Contact</h5>
-            <dl>
-                <dt>Lab Op Desk</dt>
-                <dd>491-7406</dd>
+                <h5>Contact</h5>
+                <dl>
+                    <dt>Lab Op Desk</dt>
+                    <dd>491-7406</dd>
 
-                <dt>Senior Lab Op</dt>
-                <dd><a href="mailto:blake.c.davis@colostate.edu">Blake Davis</a></dd>
-            </dl>
+                    <dt>Senior Lab Op</dt>
+                    <dd><a href="mailto:blake.c.davis@colostate.edu">Blake Davis</a></dd>
+                </dl>
+            </div>
         </aside>
         <main>
             <h2>Gifford 317</h2>
