fix navbar links

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                                 <a href="labs/education.html">Education</a>
                             </li>
                             <li>
-                                <a href="#">Gifford</a>
+                                <a href="labs/gifford.html">Gifford</a>
                             </li>
                             <li>
                                 <a href="#">Moby</a>
