--- a/labs/index.html
+++ b/labs/index.html
@@ -29,7 +29,7 @@
                             <a href="education.html">Education</a>
                         </li>
                         <li>
-                            <a href="#">Gifford</a>
+                            <a href="gifford.html">Gifford</a>
                         </li>
                         <li>
                             <a href="#">Moby</a>
@@ -59,7 +59,7 @@
                     <a href="education.html">Education 220</a>
                 </li>
                 <li>
-                    <a href="#">Gifford 317</a>
+                    <a href="gifford.html">Gifford 317</a>
                 </li>
                 <li>
                     <a href="#">Moby B-219A</a>
