--- a/labs/gifford.html
+++ b/labs/gifford.html
@@ -47,7 +47,7 @@
                 <a class="nav-link" href="#"><i class="fas fa-tasks"></i> Tutorials</a>
             </li>
             <li>
-                <a class="nav-link" href="#"><i class="fas fa-envelope"></i> Contact</a>
+                <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
             </li>
         </ul>
     </nav>
