finish nav links

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                                 <a href="labs/gifford.html">Gifford</a>
                             </li>
                             <li>
-                                <a href="#">Moby</a>
+                                <a href="labs/moby.html">Moby</a>
                             </li>
                             <li>
-                                <a href="#">Precon</a>
+                                <a href="labs/precon.html">Precon</a>
                             </li>
                             <li>
-                                <a href="#">RDC</a>
+                                <a href="labs/rdc.html">RDC</a>
                             </li>
                         </ul>
                     </div>
