--- a/labs/index.html
+++ b/labs/index.html
@@ -32,19 +32,19 @@
                             <a href="gifford.html">Gifford</a>
                         </li>
                         <li>
-                            <a href="#">Moby</a>
+                            <a href="moby.html">Moby</a>
                         </li>
                         <li>
-                            <a href="#">Precon</a>
+                            <a href="precon.html">Precon</a>
                         </li>
                         <li>
-                            <a href="#">RDC</a>
+                            <a href="rdc.html">RDC</a>
                         </li>
                     </ul>
                 </div>
             </li>
             <li>
-                <a class="nav-link" href="#"><i class="fas fa-tasks"></i> Tutorials</a>
+                <a class="nav-link" href="../tutorials/index.html"><i class="fas fa-tasks"></i> Tutorials</a>
             </li>
             <li>
                 <a class="nav-link" href="../contact.html"><i class="fas fa-envelope"></i> Contact</a>
@@ -62,13 +62,13 @@
                     <a href="gifford.html">Gifford 317</a>
                 </li>
                 <li>
-                    <a href="#">Moby B-219A</a>
+                    <a href="moby.html">Moby B-219A</a>
                 </li>
                 <li>
-                    <a href="#">Precon 200 & 201</a>
+                    <a href="precon.html">Precon 200 & 201</a>
                 </li>
                 <li>
-                    <a href="#">RDC 104</a>
+                    <a href="rdc.html">RDC 104</a>
                 </li>
             </ul>
         </aside>
