--- a/labs/gifford.html
+++ b/labs/gifford.html
@@ -32,19 +32,19 @@
                             <a href="gifford.html">Gifford</a>
                         </li>
                         <li>
-                            <a href="#">Moby</a>
+                            <a href="moby.html">Moby</a>
                         </li>
                         <li>
-                            <a href="#">Precon</a>
+                            <a href="precon.html">Precon</a>
                         </li>
                         <li>
-                            <a href="#">RDC</a>
+                            <a href="rdc.html">RDC</a>
                         </li>
                     </ul>
                 </div>
             </li>
             <li>
-                <a class="nav-link" href="#"><i class="fas fa-tasks"></i> Tutorials</a>
+                <a class="nav-link" href="../tutorials/index.html"><i class="fas fa-tasks"></i> Tutorials</a>
             </li>
             <li>
                 <a class="nav-link" href="../contact.html"><i class="fas fa-envelope"></i> Contact</a>
