add logo and random stuff

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 </head>
 <body>
     <div id="wrapper">
-        <header>
-            <h1>CHHS Computer Labs</h1>
-        </header>
+        <a href="index.html">
+            <header>
+                <img src="images/logo.svg" alt="CHHS Labs Logo">
+                <h1>CHHS Computer Labs</h1>
+            </header>
+        </a>
         <nav>
             <ul class="main-nav">
                 <li>
