--- a/labs/index.html
+++ b/labs/index.html
@@ -10,9 +10,12 @@
 </head>
 <body>
 <div id="wrapper">
-    <header>
-        <h1>CHHS Computer Labs</h1>
-    </header>
+    <a href="../index.html">
+        <header>
+            <img src="../images/logo.svg" alt="CHHS Labs Logo">
+            <h1>CHHS Computer Labs</h1>
+        </header>
+    </a>
     <nav>
         <ul class="main-nav">
             <li>
@@ -80,9 +83,7 @@
                 labs are staffed, and improvements are constantly being made.
                 The tech fee is invested with the general oversight of the Dean’s Leadership Council of CHHS.
             </p>
-            <a href="../images/rdc-plotter.jpg" target="_blank">
-                <img src="../images/rdc-plotter.jpg" alt="Large, gray HP InkJet Plotter printer on a white background"/>
-            </a>
+            <img src="../images/rdc-plotter.jpg" alt="Large, gray HP InkJet Plotter printer on a white background"/>
             <div class="caption">The plotter is an advanced printer designed for posters, architectural floorplans, and
                 interior design renderings.
             </div>
