--- a/labs/moby.html
+++ b/labs/moby.html
@@ -2,9 +2,136 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>CHHS Labs | Moby B-219A</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+          integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
+<div id="wrapper">
+    <a href="../index.html">
+        <header>
+            <img src="../images/logo.svg" alt="CHHS Labs Logo">
+            <h1>CHHS Computer Labs</h1>
+        </header>
+    </a>
+    <nav>
+        <ul class="main-nav">
+            <li>
+                <a class="nav-link" href="../index.html"><i class="fas fa-home"></i> Home</a>
+            </li>
+            <li>
+                <a class="nav-link" href="index.html">
+                    <i class="fas fa-desktop"></i> Labs
+                </a>
+                <i data-target="#labs-dropdown" class="fas fa-caret-down dropdown-toggle text-white"></i>
+                <div class="dropdown-content" id="labs-dropdown">
+                    <ul>
+                        <li>
+                            <a href="education.html">Education</a>
+                        </li>
+                        <li>
+                            <a href="gifford.html">Gifford</a>
+                        </li>
+                        <li>
+                            <a href="moby.html">Moby</a>
+                        </li>
+                        <li>
+                            <a href="precon.html">Precon</a>
+                        </li>
+                        <li>
+                            <a href="rdc.html">RDC</a>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <a class="nav-link" href="../tutorials/index.html"><i class="fas fa-tasks"></i> Tutorials</a>
+            </li>
+            <li>
+                <a class="nav-link" href="../contact.html"><i class="fas fa-envelope"></i> Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <div id="content">
+        <aside>
+            <div class="sticky-top">
+                <h5>Hours</h5>
+                <dl>
+                    <dt>Monday - Friday</dt>
+                    <dd>7:30am - 8:30pm</dd>
 
+                    <dt>Saturday and Sunday</dt>
+                    <dd>Closed</dd>
+
+                    <dt>Stadium Game Days</dt>
+                    <dd>Closed</dd>
+                </dl>
+
+                <h5>Contact</h5>
+                <dl>
+                    <dt>Lab Op Desk</dt>
+                    <dd>491-6004</dd>
+
+                    <dt>Senior Lab Op</dt>
+                    <dd><a href="mailto:molly.henrikson@colostate.edu">Molly Henrikson</a></dd>
+                </dl>
+            </div>
+        </aside>
+        <main>
+            <h2 class="mb-1">Moby B-219A</h2>
+            <div class="alert">
+                <p>
+                    <strong>Warning:</strong> The Moby computer lab is experiencing HVAC issues, causing temperatures as low as 60&#8457;.
+                </p>
+            </div>
+            <p>Welcome to the Moby B-219A computer lab.
+                Located on the second floor of the B-wing of Moby Arena at 951 W Plum St, directly south of Piñon Hall, this lab serves students in the Health and Exercise Science and Food Science and Human Nutrition majors.</p>
+            <img src="../images/moby.jpg" alt="The Moby B-219A lab, with 6 black, flat-screen monitors visible on gray desks" />
+            <p class="caption">The Education 220 lab has 43 computers available to students and a teacher podium with a projector screen.</p>
+
+            <h4>Reservations</h4>
+            <p>The Education 220 lab is reserved for classes during the following times:</p>
+            <ul>
+                <li>Monday: 10:00am-10:50am, 11:00am-1:50pm</li>
+                <li>Tuesday: 9:00am-10:40am, 2:00pm-2:50pm, 3:00pm-4:50pm</li>
+                <li>Wednesday: 10:00am-10:50am, 7:00pm-8:00pm</li>
+                <li>Thursday: 9:00am-10:40am, 2:00pm-2:50pm</li>
+                <li>Friday: 9:00am-10:50am</li>
+            </ul>
+
+            <h4>Hardware</h4>
+            <p>The Education 220 lab has a color printer, black and white printer, and a plotter.
+                The computers are HP Z2 Mini workstations equipped with 8GB of RAM.</p>
+
+            <h4>Software</h4>
+            <p>The following software is available in the Education 220 lab:</p>
+            <ul>
+                <li>Audacity</li>
+                <li>Autodesk 2020 (3ds Max, Architecture, Arnold, AutoCAD, Inventor, NavisWorks, Revit)</li>
+                <li>EndNote</li>
+                <li>Microsoft Office</li>
+                <li>Microsoft Project</li>
+                <li>Microsoft Visio</li>
+                <li>NVivo</li>
+                <li>Read&Write Gold</li>
+                <li>Rstudio Desktop</li>
+                <li>SAS University</li>
+                <li>SketchUp Pro</li>
+                <li>SMART Notebook</li>
+                <li>SPSS, AMOS</li>
+                <li>V-Ray</li>
+                <li>WindowShades</li>
+                <li>Zotero</li>
+            </ul>
+
+        </main>
+    </div>
+    <footer>
+        <p>Copyright &copy; 2021, CHHS Computer Labs</p>
+    </footer>
+</div>
+<script defer src="../scripts/dropdown.js"></script>
 </body>
 </html>
