--- a/labs/moby.html
+++ b/labs/moby.html
@@ -83,30 +83,34 @@
             <h2 class="mb-1">Moby B-219A</h2>
             <div class="alert">
                 <p>
-                    <strong>Warning:</strong> The Moby computer lab is experiencing HVAC issues, causing temperatures as low as 60&#8457;.
+                    <strong>Warning:</strong> The Moby computer lab is experiencing HVAC issues, causing temperatures as
+                    low as 60&#8457;.
                 </p>
             </div>
             <p>Welcome to the Moby B-219A computer lab.
-                Located on the second floor of the B-wing of Moby Arena at 951 W Plum St, directly south of Piñon Hall, this lab serves students in the Health and Exercise Science and Food Science and Human Nutrition majors.</p>
-            <img src="../images/moby.jpg" alt="The Moby B-219A lab, with 6 black, flat-screen monitors visible on gray desks" />
-            <p class="caption">The Education 220 lab has 43 computers available to students and a teacher podium with a projector screen.</p>
+                Located on the second floor of the B-wing of Moby Arena at 951 W Plum St, directly south of Piñon Hall,
+                this lab serves students in the Health and Exercise Science, Sports Medicine, and Food Science and Human Nutrition
+                majors.</p>
+            <img src="../images/moby.jpg"
+                 alt="The Moby B-219A lab, with 6 black, flat-screen monitors visible on gray desks"/>
+            <p class="caption">The Moby B-219A lab has 42 computers available to students and a teacher podium with a
+                projector screen.</p>
 
             <h4>Reservations</h4>
-            <p>The Education 220 lab is reserved for classes during the following times:</p>
+            <p>The Moby B-219A lab is reserved for classes during the following times:</p>
             <ul>
-                <li>Monday: 10:00am-10:50am, 11:00am-1:50pm</li>
-                <li>Tuesday: 9:00am-10:40am, 2:00pm-2:50pm, 3:00pm-4:50pm</li>
-                <li>Wednesday: 10:00am-10:50am, 7:00pm-8:00pm</li>
-                <li>Thursday: 9:00am-10:40am, 2:00pm-2:50pm</li>
-                <li>Friday: 9:00am-10:50am</li>
+                <li>Tuesday: 4:00pm-5:15pm</li>
+                <li>Thursday: 4:00pm-5:15pm</li>
+                <li>Friday: 10:00am-10:50am</li>
             </ul>
 
             <h4>Hardware</h4>
-            <p>The Education 220 lab has a color printer, black and white printer, and a plotter.
+            <p>The Moby B-219A lab has a color printer and a black and white printer, but it does <strong>not</strong>
+                have a plotter.
                 The computers are HP Z2 Mini workstations equipped with 8GB of RAM.</p>
 
             <h4>Software</h4>
-            <p>The following software is available in the Education 220 lab:</p>
+            <p>The following software is available in the Moby B-219A lab:</p>
             <ul>
                 <li>Audacity</li>
                 <li>Autodesk 2020 (3ds Max, Architecture, Arnold, AutoCAD, Inventor, NavisWorks, Revit)</li>
@@ -119,11 +123,9 @@
                 <li>Rstudio Desktop</li>
                 <li>SAS University</li>
                 <li>SketchUp Pro</li>
-                <li>SMART Notebook</li>
                 <li>SPSS, AMOS</li>
                 <li>V-Ray</li>
                 <li>WindowShades</li>
-                <li>Zotero</li>
             </ul>
 
         </main>
