remove icons from index and contact

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CHHS Labs | IT & Computing Services</title>
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 </head>
 <body>
     <div id="wrapper">
@@ -18,13 +17,13 @@
         <nav>
             <ul class="main-nav">
                 <li>
-                    <a class="nav-link" href="index.html"><i class="fas fa-home"></i> Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li>
-                    <a class="nav-link" href="labs/index.html" >
-                        <i class="fas fa-desktop"></i> Labs
+                    <a class="nav-link" href="labs/index.html">
+                        Labs
                     </a>
-                    <i data-target="#labs-dropdown" class="fas fa-caret-down dropdown-toggle text-white"></i>
+                    <span data-target="#labs-dropdown" class="dropdown-toggle text-white">&#x25BC;</span>
                     <div class="dropdown-content" id="labs-dropdown">
                         <ul>
                             <li>
