--- a/labs/rdc.html
+++ b/labs/rdc.html
@@ -19,13 +19,13 @@
     <nav>
         <ul class="main-nav">
             <li>
-                <a class="nav-link" href="../index.html"><i class="fas fa-home"></i> Home</a>
+                <a class="nav-link" href="../index.html">Home</a>
             </li>
             <li>
                 <a class="nav-link" href="index.html">
-                    <i class="fas fa-desktop"></i> Labs
+                    Labs
                 </a>
-                <i data-target="#labs-dropdown" class="fas fa-caret-down dropdown-toggle text-white"></i>
+                <span data-target="#labs-dropdown" class="dropdown-toggle text-white">&#x25BC;</span>
                 <div class="dropdown-content" id="labs-dropdown">
                     <ul>
                         <li>
@@ -47,10 +47,10 @@
                 </div>
             </li>
             <li>
-                <a class="nav-link" href="../tutorials/index.html"><i class="fas fa-tasks"></i> Tutorials</a>
+                <a class="nav-link" href="../tutorials/index.html">Tutorials</a>
             </li>
             <li>
-                <a class="nav-link" href="../contact.html"><i class="fas fa-envelope"></i> Contact</a>
+                <a class="nav-link" href="../contact.html">Contact</a>
             </li>
         </ul>
     </nav>
