--- a/contact.html
+++ b/contact.html
@@ -46,10 +46,10 @@
                 </div>
             </li>
             <li>
-                <a class="nav-link" href="#"><i class="fas fa-tasks"></i> Tutorials</a>
+                <a class="nav-link" href="#">Tutorials</a>
             </li>
             <li>
-                <a class="nav-link" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
+                <a class="nav-link" href="contact.html">Contact</a>
             </li>
         </ul>
     </nav>
