--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </div>
                 </li>
                 <li>
-                    <a class="nav-link" href="#">Tutorials</a>
+                    <a class="nav-link" href="tutorials/index.html">Tutorials</a>
                 </li>
                 <li>
                     <a class="nav-link" href="contact.html">Contact</a>
