remove font awesome css link

--- a/labs/precon.html
+++ b/labs/precon.html
@@ -2,9 +2,159 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>CHHS Labs | Precon 200</title>
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
+<div id="wrapper">
+    <a href="../index.html">
+        <header>
+            <img src="../images/logo.svg" alt="CHHS Labs Logo">
+            <h1>CHHS Computer Labs</h1>
+        </header>
+    </a>
+    <nav>
+        <ul class="main-nav">
+            <li>
+                <a class="nav-link" href="../index.html">Home</a>
+            </li>
+            <li>
+                <a class="nav-link" href="index.html">
+                    Labs
+                </a>
+                <span data-target="#labs-dropdown" class="dropdown-toggle text-white">&#x25BC;</span>
+                <div class="dropdown-content" id="labs-dropdown">
+                    <ul>
+                        <li>
+                            <a href="education.html">Education</a>
+                        </li>
+                        <li>
+                            <a href="gifford.html">Gifford</a>
+                        </li>
+                        <li>
+                            <a href="moby.html">Moby</a>
+                        </li>
+                        <li>
+                            <a href="precon.html">Precon</a>
+                        </li>
+                        <li>
+                            <a href="rdc.html">RDC</a>
+                        </li>
+                    </ul>
+                </div>
+            </li>
+            <li>
+                <a class="nav-link" href="../tutorials/index.html">Tutorials</a>
+            </li>
+            <li>
+                <a class="nav-link" href="../contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    <div id="content">
+        <aside>
+            <div class="sticky-top">
+                <h5>Hours <span class="badge">24/7 Access</span></h5>
+                <dl>
+                    <dt>Monday - Friday</dt>
+                    <dd>7:30am - 8:30pm</dd>
 
+                    <dt>Saturday and Sunday</dt>
+                    <dd>10:30am - 4:30pm</dd>
+
+                    <dt>Stadium Game Days</dt>
+                    <dd>Closed</dd>
+                </dl>
+
+                <h5>Contact</h5>
+                <dl>
+                    <dt>Lab Op Desk</dt>
+                    <dd>491-6547</dd>
+
+                    <dt>Senior Lab Op</dt>
+                    <dd><a href="mailto:jack.hermanson@colostate.edu">Jack Hermanson</a></dd>
+                </dl>
+            </div>
+        </aside>
+        <main>
+            <h2>RDC 104</h2>
+            <p>Welcome to the RDC 104 computer lab.
+                Located on the first floor of the <a href="https://www.chhs.colostate.edu/rdc/" target="_blank">Nancy
+                    Richardson Design Center</a> at 522 W Lake St, directly east of the Stadium, this lab serves
+                students in Apparel Merchandising, Interior Architecture and Design, and
+                <a href="https://catalog.colostate.edu/general-catalog/courses-az/idea/" target="_blank">IDEA</a>
+                programs.</p>
+            <img src="../images/rdc.jpg" alt="The RDC 104 lab, with black flat-screen monitors protruding from white desks and two large TVs hanging from the ceiling">
+            <p class="caption">The RDC 104 lab has 87 computers available to students and a teacher podium with a
+                projector screen.</p>
+
+            <h4>Reservations</h4>
+            <p>The RDC 104 lab is reserved for classes during the following times:</p>
+            <ul>
+                <li>Monday: 8:00am-9:50am, 10:00am-10:50am, 12:00pm-12:50pm, 3:00pm-3:50pm, 4:00pm-4:50pm</li>
+                <li>Tuesday: 12:00pm-12:50pm, 2:00pm-3:40pm, 4:00pm-5:50pm</li>
+                <li>Wednesday: 8:00am-9:50am, 10:00am-10:50am, 12:00pm-12:50pm, 3:00pm-3:50pm, 4:00pm-4:50pm</li>
+                <li>Thursday: 11:00am-12:15pm, 2:00pm-3:40pm</li>
+                <li>Friday: 8:00am-9:50am, 10:00am-11:50am</li>
+            </ul>
+
+            <h4>Hardware</h4>
+            <p>The RDC 104 lab has a color printer, a black and white printer, and a plotter.
+                The computers in the front lab are HP Z2 G4 workstations equipped with 16GB of RAM.
+                The computers in the back lab are HP Z4 G4 workstations equipped with 32GB of RAM.
+            </p>
+
+            <h4>Software</h4>
+            <p>The following software is available in the Gifford 317 lab:</p>
+            <ul>
+                <li>
+                    Adobe Creative Cloud Suite
+                    <ul>
+                        <li>Acrobat</li>
+                        <li>Photoshop</li>
+                        <li>Illustrator</li>
+                        <li>InDesign</li>
+                    </ul>
+                </li>
+                <li>Audacity</li>
+                <li>
+                    Autodesk 2020
+                    <ul>
+                        <li>3DS Max</li>
+                        <li>Architecture</li>
+                        <li>Arnold</li>
+                        <li>AutoCAD</li>
+                        <li>Inventor</li>
+                        <li>NavisWorks</li>
+                        <li>Revit</li>
+                    </ul>
+                </li>
+                <li>CLO3D</li>
+                <li>EndNote</li>
+                <li>EnRoute</li>
+                <li>Enscape 3D</li>
+                <li>Meshmixer</li>
+                <li>Microsoft Office</li>
+                <li>Microsoft Project</li>
+                <li>Microsoft Visio</li>
+                <li>Read&Write Gold</li>
+                <li>Rhino</li>
+                <li>Rstudio Desktop</li>
+                <li>SketchUp Pro</li>
+                <li>SPSS, AMOS</li>
+                <li>Steam</li>
+                <li>Unity 3D</li>
+                <li>V-Ray</li>
+                <li>WindowShades</li>
+            </ul>
+
+        </main>
+    </div>
+    <footer>
+        <p>Copyright &copy; 2021, CHHS Computer Labs</p>
+    </footer>
+</div>
+<script defer src="../scripts/dropdown.js"></script>
 </body>
 </html>
